Add API test screen and integrate http package
Introduced a new ApiTest screen for testing API calls using the http package. Registered the new route in AppRoutes and added a button in the login screen to navigate to the API test. Updated pubspec.yaml to include http as a direct dependency and applied the Google Services Gradle plugin for Android.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   # Firebase initialization and core services
   firebase_core: ^4.3.0
 
+  http: ^1.6.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
