--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,12 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Fix for Windows cross-drive compilation error (C:\ vs D:\)
+# Disables Kotlin incremental compilation which fails with different drive roots
+kotlin.incremental=false
+kotlin.incremental.java=false
+kotlin.caching.enabled=false
+
+# Optional: Enable parallel builds for faster compilation
+org.gradle.parallel=true
