--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,40 +28,58 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  # Core Flutter SDK
+  # Core Flutter SDK and widgets
   flutter:
     sdk: flutter
 
-  # iOS-style icons for Cupertino widgets
+  # iOS-style icon set for Cupertino widgets
   cupertino_icons: ^1.0.8
 
-  # UI component library with pre-built widgets
+  # Pre-built UI components (buttons, cards, badges, etc.)
   getwidget: ^7.0.0
 
-  # Calendar and date picker functionality
+  # Calendar views and date selection widgets
   calendar_view: ^1.4.0
 
-  # Charting and data visualization library
+  # Charts for data visualization (line, bar, pie, etc.)
   fl_chart: ^1.1.1
 
-  # Enhanced snackbar notifications with custom styling
+  # Styled snackbar/toast content helpers
   awesome_snackbar_content: ^0.1.8
 
-  # Firebase initialization and core services
-  firebase_core: ^4.3.0
-
+  # HTTP client for REST/JSON APIs
   http: ^1.6.0
 
+  # Firebase core initialization
+  firebase_core: ^4.3.0
+
+  # Firebase email/password auth flows
+  firebase_auth: ^6.1.3
+
+  # Google OAuth sign-in integration
+  google_sign_in: ^7.2.0
+
+  # State management with BLoC pattern
+  flutter_bloc: ^9.1.0
+
+  # Value equality for states/events
+  equatable: ^2.0.7
+
+  # Dependency injection
+  get_it: ^8.0.3
+
+  # Secure storage for tokens
+  flutter_secure_storage: ^9.2.4
+
 dev_dependencies:
+  # Flutter's widget and unit testing framework
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # Recommended lint rules (configured in analysis_options.yaml)
   flutter_lints: ^6.0.0
+
+  # CLI to generate Android/iOS launcher icons
   flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
