Phase 5: Create settings feature
- Created domain layer:
  - AppSettings entity with AppThemeMode enum (system/light/dark)
  - SettingsRepository interface with Result<T> returns
  - UseCases: GetSettings, UpdateThemeMode, ToggleNotifications, ToggleBiometric, ToggleLocationTracking, ClearSettings

- Created data layer:
  - AppSettingsModel with JSON serialization
  - SettingsLocalDataSource using SharedPreferences
  - SettingsRepositoryImpl with CacheException-to-CacheFailure mapping

- Created presentation layer:
  - SettingsBloc with all settings events and states
  - SettingsScreen with theme mode selection, toggle switches
  - Sections: Appearance, Privacy & Security, Notifications, About, Danger Zone

- Added shared_preferences dependency to pubspec.yaml
- Updated DI container with SharedPreferences and settings registration
- Updated router to use new settings feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ dependencies:
   # Secure storage for tokens
   flutter_secure_storage: ^9.2.4
 
+  # Key-value storage for settings
+  shared_preferences: ^2.5.3
+
 dev_dependencies:
   # Flutter's widget and unit testing framework
   flutter_test:
