Phase 7: Add comprehensive unit tests for Clean Architecture
Test Coverage:
- Core layer: Result<T> sealed class, all Failure types
- Auth feature: AuthUser entity, LoginBloc (email, Google, phone login)
- Settings feature: AppSettings entity/model, all use cases, SettingsBloc

Test Infrastructure:
- Added mocktail ^1.0.4 for mocking
- Added bloc_test ^10.0.0 for BLoC testing
- Test structure mirrors lib/ with test/core/ and test/features/

Results: 83 tests passing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Mocking library for tests
+  mocktail: ^1.0.4
+
+  # BLoC testing utilities
+  bloc_test: ^10.0.0
+
   # Recommended lint rules (configured in analysis_options.yaml)
   flutter_lints: ^6.0.0
 
