--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,17 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+# Exclude old/deleted files from analysis
+analyzer:
+  exclude:
+    - lib/screens/**
+    - lib/models/**
+    - lib/services/**
+    - lib/widgets/**
+    - lib/utils/**
+    - lib/app/routes.dart
+    - lib/app/theme.dart
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -23,6 +34,5 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
