Fix: Google Sign-In and auth-based routing
FIXES:
1. Google Sign-In: Downgraded to google_sign_in 6.x for stable Firebase integration
   - Fixed signInWithGoogle() to use standard OAuth flow
   - Added proper null checks and error handling
   - Added debug logging for troubleshooting

2. Auth-based Routing: Created AuthGate widget
   - App now shows Login or ScanScreen based on auth state
   - Uses Firebase authStateChanges() stream
   - Eliminates need for manual navigation after login

3. Updated app.dart to use AuthGate as home widget

CHANGES:
- lib/features/auth/data/datasources/firebase_auth_service.dart
- lib/features/auth/presentation/widgets/auth_gate.dart (new)
- lib/features/auth/presentation/pages/login_screen.dart
- lib/app/app.dart
- pubspec.yaml (google_sign_in ^7.2.0 -> ^6.2.1)

All 102 tests passing.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dependencies:
   # Firebase email/password auth flows
   firebase_auth: ^6.1.3
 
-  # Google OAuth sign-in integration
-  google_sign_in: ^7.2.0
+  # Google OAuth sign-in integration (using 6.x for simpler Firebase integration)
+  google_sign_in: ^6.2.1
 
   # State management with BLoC pattern
   flutter_bloc: ^9.1.0
