Implement new home screen and theme system
Added a new home screen with quick actions, attendance stats, and request list. Introduced separate light and dark theme files, a theme controller for persistent theme mode, and refactored theme usage throughout the app. Migrated routing to GoRouter with authentication-aware redirects. Improved error handling and snackbar notifications. Added mock data for development and new widgets for home screen UI.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,31 @@ dependencies:
   # Key-value storage for settings
   shared_preferences: ^2.5.3
 
+  # Modern UI Stack
+  # Declarative routing with type-safe navigation
+  go_router: ^15.1.2
+
+  # Responsive sizing for different screen sizes
+  flutter_screenutil: ^5.9.3
+
+  # Declarative animation library
+  flutter_animate: ^4.5.2
+
+  # Cached network images with placeholder support
+  cached_network_image: ^3.4.1
+
+  # Skeleton loading shimmer effect
+  shimmer: ^3.0.0
+
+  # Notification badges
+  badges: ^3.1.2
+
+  # Swipe actions for list items
+  flutter_slidable: ^3.1.2
+
+  # Gap spacing widget (cleaner than SizedBox)
+  gap: ^3.0.1
+
 dev_dependencies:
   # Flutter's widget and unit testing framework
   flutter_test:
