--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,21 @@ dependencies:
   # Gap spacing widget (cleaner than SizedBox)
   gap: ^3.0.1
 
+  # Permission handling for runtime permissions
+  permission_handler: ^11.4.0
+
+  # Location services and positioning
+  geolocator: ^14.0.0
+
+  # Network connectivity checking
+  connectivity_plus: ^6.1.4
+
+  # Firebase push notifications
+  firebase_messaging: ^16.0.0
+
+  # Local notification display
+  flutter_local_notifications: ^19.2.1
+
 dev_dependencies:
   # Flutter's widget and unit testing framework
   flutter_test:
