Add biometric authentication support
Introduces biometric authentication using the local_auth package. Adds platform permissions and configuration for Android and iOS, implements BiometricAuthService, and integrates biometric enable/disable logic into settings. Updates dependency injection, permission screen, and adds comprehensive tests for biometric toggling.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,5 +61,8 @@
 		</array>
 		<key>FirebaseAppDelegateProxyEnabled</key>
 		<false/>
+		<!-- Biometric authentication (Face ID) -->
+		<key>NSFaceIDUsageDescription</key>
+		<string>Attendly uses Face ID to securely authenticate you for quick sign-in.</string>
 	</dict>
 </plist>
