--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,13 @@ dependencies:
   # Biometric authentication (fingerprint, Face ID)
   local_auth: ^2.2.0
 
+  # Local database for offline data caching
+  sqflite: ^2.4.2
+
+  # Path provider for database directory
+  path_provider: ^2.1.5
+  path: ^1.9.1
+
   # Modern UI Stack
   # Declarative routing with type-safe navigation
   go_router: ^15.1.2
